# ChangeLog for dev-python/pyhistorian
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Apr 2012; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.8.ebuild:
  src_install default hack now in jnrowe-pypi eclass.

  08 Apr 2012; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.8.ebuild:
  Switched to python-distutils-ng eclass.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.8.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.8.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.8.ebuild,
  metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  02 Jul 2010; James Rowe <jnrowe@gmail.com> -pyhistorian-0.6.3.ebuild,
  pyhistorian-0.6.8.ebuild:
  Keyworded x86.

  02 Jul 2010; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.8.ebuild:
  Keyworded amd64.

*pyhistorian-0.6.8 (02 Jun 2010)

  02 Jun 2010; James Rowe <jnrowe@gmail.com> +pyhistorian-0.6.8.ebuild:
  Version bump [b9d].

  21 Mar 2010; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.3.ebuild:
  Added PYTHON_DEPEND setting.

  18 Nov 2009; James Rowe <jnrowe@gmail.com> -pyhistorian-0.6.2.ebuild,
  pyhistorian-0.6.3.ebuild:
  Keyworded x86.

  18 Nov 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.3.ebuild:
  Keyworded amd64.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> -pyhistorian-0.6.1.ebuild,
  pyhistorian-0.6.2.ebuild:
  Keyworded x86, removed stale version.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.2.ebuild:
  Keyworded amd64.

  06 Nov 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.1.ebuild:
  Keyworded amd64 [79e].
