@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Apr 2012; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.8.ebuild:
+  Fix src_install breakage due to default Makefile use.
+
   09 Apr 2012; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.8.ebuild:
   src_install default hack now in jnrowe-pypi eclass.
 
